cmake_minimum_required (VERSION 2.8)
find_package(Java REQUIRED)
#find_package(JNI)
include(UseJava)
project (pmgd-jni)
add_jar(pmgd-jar EdgeIterator.java Edge.java Exception.java Filter.java Graph.java NodeIterator.java Node.java PropertyIterator.java Property.java PropertyPredicate.java StringID.java Transaction.java)

message(STAUS ${CMAKE_CURRENT_BINARY_DIR})
add_jar(PropertyHeader Property.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS Property DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
add_jar(PropertyIteratorHeader PropertyIterator.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS PropertyIterator DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(NodeHeader Node.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS Node DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(NodeIteratorHeader NodeIterator.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS NodeIterator DESTINATION DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(EdgeHeader Edge.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS Edge DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(EdgeIteratorHeader EdgeIterator.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS EdgeIterator DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(TransactionHeader Transaction.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS Transaction DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(GraphHeader Graph.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS Graph  DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(ExceptionHeader Exception.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS Exception DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(PropertyPredicateHeader PropertyPredicate.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS PropertyPredicate DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_jar(StringIDHeader StringID.java INCLUDE_JARS pmgd-jar GENERATE_NATIVE_HEADERS StringID DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

include_directories(../include/ ../util/ ${CMAKE_CURRENT_BINARY_DIR} /usr/lib/jvm/java-11-openjdk-amd64/include /usr/lib/jvm/java-11-openjdk-amd64/include/linux)

message(STATUS ${JAVA_JVM_LIBRARY})
add_library(pmgd-jni common.cc Edge.cc EdgeIterator.cc Exception.cc Graph.cc Node.cc NodeIterator.cc Property.cc PropertyIterator.cc PropertyPredicate.cc StringID.cc Transaction.cc)
add_dependencies(pmgd-jni PropertyHeader PropertyIteratorHeader NodeHeader NodeIteratorHeader EdgeHeader EdgeIteratorHeader TransactionHeader GraphHeader ExceptionHeader PropertyPredicateHeader StringIDHeader)
